# sftp-log-pgsql

./: CMakeLists.txt  README.md  sftp_log_pgsql_conf
src/: CMakeLists.txt  sftp-callback.h  sftp-common.h  sftp-pgsql-plugin-log.cpp  sftp-pgsql-plugin-store.cpp  sftp-pgsql-plugin-store.h  sftp-pgsql-plugin.cpp  sftp-plugin.h  sftp_ddl.sql  tests.cpp
